--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Dome Raduno | affitta Dome, tensostruttura, eventi</title>
   <meta name="description" content="Affitta Tensostruttura DOME per eventi e raduni in natura. Richiedi preventivo | Prenota Ora"/>
   <!-- FB open graph -->
-  <meta property="og:url" content="http://www.summercampcircleway.com" /> 
+  <meta property="og:url" content="http://https://domeraduno.github.io/DomeRadUno2/index.html" /> 
   <meta property="og:title" content="DomeRadUno | Affitta tensostruttura Dome per eventi" /> 
   <meta property="og:image" content="Dome_rosa_sf.jpg" /> 
   <meta property="og:description"    content="Affitta Tensostruttura DOME per eventi e raduni in natura. Richiedi preventivo | Prenota Ora" />
