cambio http con domraduno.life

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Dome Raduno | affitta Dome, tensostruttura, eventi</title>
+  <title>Dome Raduno | affitta la Dome e Raduna la tribù</title>
   <meta name="description" content="Affitta Tensostruttura DOME per eventi e raduni in natura. Richiedi preventivo | Prenota Ora"/>
   <!-- FB open graph -->
-  <meta property="og:url" content="http://domeraduno.github.io/DomeRadUno2/index.html" /> 
-  <meta property="og:title" content="DomeRadUno | Affitta tensostruttura Dome per eventi" /> 
-  <meta property="og:image" content="http://domeraduno.github.io/DomeRadUno2/Dome_rosa_sf.jpg" /> 
+  <meta property="og:url" content="http://domeraduno.life/index.html" /> 
+  <meta property="og:title" content="Dome Raduno | affitta la Dome e Raduna la tribù" /> 
+  <meta property="og:image" content="http://domeraduno.life/Dome_rosa_sf.jpg" /> 
   <meta property="og:description"    content="Affitta Tensostruttura DOME per eventi e raduni in natura. Richiedi preventivo | Prenota Ora" />
 
   <!-- CSS  -->
