cambio per foto solo su github

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- FB open graph -->
   <meta property="og:url" content="http://domeraduno.life/index.html" /> 
   <meta property="og:title" content="Dome Raduno | affitta la Dome e Raduna la tribù" /> 
-  <meta property="og:image" content="http://domeraduno.life/Dome_rosa_sf.jpg" /> 
+  <meta property="og:image" content="http://domeraduno.github.io/DomeRadUno2/Dome_rosa_sf.jpg" /> 
   <meta property="og:description"    content="Affitta Tensostruttura DOME per eventi e raduni in natura. Richiedi preventivo | Prenota Ora" />
 
   <!-- CSS  -->
