--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="icon-block">
               <h2 class="center brown-text"><i class="material-icons">home</i></h2>
               <h4>ed inoltre a richiesta..</h4>
-              <h5 class="center light">Tensostruttura per ospitare cucina da campo, cucina a gas con 5 fuochi e forno a gas, tavolo da lavoro in acciaio, lavabo, piccolo frigo da campo, pentole e utensili.</h5>
+              <h5 class="center light">Tensostruttura per ospitare cucina da campo, cucina a gas con 5 fuochi e forno, tavolo da lavoro in acciaio, lavabo, piccolo frigo da campo, pentole e utensili.</h5>
             </div>
           </div>
         </div>
