--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img class="responsive-img" src="Dome_rosa_sf.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img class="responsive-img" src="Dome_rosa.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
   <!-- Zona Servizi -->
