via menu mobile e sfondo _sfo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- FB open graph -->
   <meta property="og:url" content="http://domeraduno.life/index.html" /> 
   <meta property="og:title" content="Dome Raduno | affitta la Dome e Raduna la tribù" /> 
-  <meta property="og:image" content="http://domeraduno.github.io/DomeRadUno2/Dome_rosa_sf.jpg" /> 
+  <meta property="og:image" content="http://domeraduno.github.io/DomeRadUno2/Dome_rosa_sfo.jpg" /> 
   <meta property="og:description"    content="Affitta Tensostruttura DOME per eventi e raduni in natura. Richiedi preventivo | Prenota Ora" />
 
   <!-- CSS  -->
@@ -37,15 +37,15 @@
     <nav>
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">DomeRent</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <!--a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a-->
         <ul class="right hide-on-med-and-down">
           <li><a href="#servizi">Info</a></li>
           <li><a href="#contatti">Prenota</a></li>
         </ul>
-        <ul class="sidenav" id="mobile-demo">
+        <!--ul class="sidenav" id="mobile-demo">
           <li><a href="#servizi">Info</a></li>
           <li><a href="#contatti">Prenota</a></li></ul>
-        </ul>
+        </ul-->
      </div>
     </nav>
   </div>
