mod barra per desktop

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
         <!--a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a-->
         <ul class="right hide-on-med-and-down">
           <li><a href="#servizi">Info</a></li>
-          <li><a href="#contatti">Prenota</a></li>
+          <li><a href="#contatti">Contatti</a></li>
+          <!--li><a href="#galleria">Gallery</a></li-->
+          <li><a href="#">Preventivo</a></li>
         </ul>
-        <!--ul class="sidenav" id="mobile-demo">
-          <li><a href="#servizi">Info</a></li>
+        <!--ul class="sidenav" id="mobile-demo">galleria   <li><a href="#servizi">Info</a></li>
           <li><a href="#contatti">Prenota</a></li></ul>
         </ul-->
      </div>
@@ -158,8 +159,15 @@
 
       </div>
     </div>
+
      <div class="parallax"><img src="Dome_Testata.jpg" alt="Unsplashed background img 2"></div>
   </div>
+
+      <!-- div id="galleria" >
+          <div class="row center">
+            <div class="parallax-collage"><img class="responsive-img" src="collage.jpg" alt="Unsplashed background img 2"></div>
+          </div>
+      </div-->
  
   <!-- Footer -->
   <footer class="page-footer">
