--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
 <!-- sumo me -->
 <script async>(function(s,u,m,o,j,v){j=u.createElement(m);v=u.getElementsByTagName(m)[0];j.async=1;j.src=o;j.dataset.sumoSiteId='396f8e8b632e08c932045867849a0f93916a1a8cd651a9d46c03638dd34ed783';v.parentNode.insertBefore(j,v)})(window,document,'script','//load.sumo.com/');</script>
 
+<!-- ad sense -->
+<script async src="//pagead2.googlesyndication.com/
+pagead/js/adsbygoogle.js"></script>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({
+google_ad_client: "ca-pub-3812065714065014",
+enable_page_level_ads: true
+});
+</script>
+
+
 </head>
 
 <body>
