--- a/index.html
+++ b/index.html
@@ -48,16 +48,19 @@ enable_page_level_ads: true
     <nav>
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">DomeRent</a>
-        <!--a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a-->
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#servizi">Info</a></li>
           <li><a href="#contatti">Contatti</a></li>
-          <!--li><a href="#galleria">Gallery</a></li-->
+          <li><a href="#galleria">Gallery</a></li>
           <li><a href="#">Preventivo</a></li>
         </ul>
-        <!--ul class="sidenav" id="mobile-demo">galleria   <li><a href="#servizi">Info</a></li>
-          <li><a href="#contatti">Prenota</a></li></ul>
-        </ul-->
+        <ul class="sidenav" id="mobile-demo">
+          <li><a href="#servizi">Info</a></li>
+          <li><a href="#contatti">Contatti</a></li>
+          <li><a href="#galleria">Gallery</a></li>
+          <li><a href="#">Preventivo</a></li>
+        </ul>
      </div>
     </nav>
   </div>
@@ -174,12 +177,16 @@ enable_page_level_ads: true
      <div class="parallax"><img src="Dome_Testata.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
-      <!-- div id="galleria" >
-          <div class="row center">
-            <div class="parallax-collage"><img class="responsive-img" src="collage.jpg" alt="Unsplashed background img 2"></div>
-          </div>
-      </div-->
- 
+
+ <div id="galleria" class="parallax-collage">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="parallax-collage"> <img class="responsive-img" src="collage.jpg"></div>
+    </div>
+  </div>  
+</div>
+
+
   <!-- Footer -->
   <footer class="page-footer">
 
