--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ enable_page_level_ads: true
           <li><a href="#galleria">Gallery</a></li>
           <li><a href="#">Preventivo</a></li>
         </ul>
-        <ul class="sidenav" id="mobile-demo">
+        <!--ul class="sidenav" id="mobile-demo">
           <li><a href="#servizi">Info</a></li>
           <li><a href="#contatti">Contatti</a></li>
           <li><a href="#galleria">Gallery</a></li>
           <li><a href="#">Preventivo</a></li>
-        </ul>
+        </ul-->
      </div>
     </nav>
   </div>
