no menu mobile 2

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ enable_page_level_ads: true
     <nav>
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">DomeRent</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <!--a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a-->
         <ul class="right hide-on-med-and-down">
           <li><a href="#servizi">Info</a></li>
           <li><a href="#contatti">Contatti</a></li>
