--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ enable_page_level_ads: true
         <div class="col l12 s12 center">
           <h5 class="white-text">Contatti : </h5>
             <li>
-              <a href="mailto:summercamplaviadelcerchio@gmail.com" target="_blank center" class="social-icon"><i class="material-icons">email</i>Manda una mail</a>
+              <a href="mailto:summercamplaviadelcerchio@gmail.com" target="_blank center" class="social-icon"><i class="material-icons">email</i>Manda una mail</a><br>
               <a href="tel:+393892740622" target="_blank center" class="social-icon"><i class="material-icons">phone</i>Chiamaci Ora</a>
             </li>
                      
