--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117931647-1"></script>
   <script>
@@ -18,7 +19,7 @@
   <!-- FB open graph -->
   <meta property="og:url" content="http://domeraduno.life/index.html" /> 
   <meta property="og:title" content="Dome Raduno | affitta la Dome e Raduna la tribù" /> 
-<meta property="og:image" content="http://domeraduno.life/Dome_rosa_sfo.jpg" />
+<meta property="og:image" content="http://domeraduno.life/dome_raduno.png" />
   <meta property="og:description"    content="Affitta Tensostruttura DOME per eventi e raduni in natura. Richiedi preventivo | Prenota Ora" />
 
   <!-- CSS  -->
