mod png x social

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- FB open graph -->
   <meta property="og:url" content="http://domeraduno.github.io/DomeRadUno2/index.html" /> 
   <meta property="og:title" content="DomeRadUno | Affitta tensostruttura Dome per eventi" /> 
-  <meta property="og:image" content="http://domeraduno.github.io/DomeRadUno2/Dome_rosa_sfo.jpg" /> 
+  <meta property="og:image" content="http://domeraduno.github.io/DomeRadUno2/dome_raduno.png" /> 
   <meta property="og:description"    content="Affitta Tensostruttura DOME per eventi e raduni in natura. Richiedi preventivo | Prenota Ora" />
 
   <!-- CSS  -->
@@ -96,7 +96,7 @@
               <h2 class="center brown-text"><i class="material-icons">build</i></h2>
               <h5 class="center">Easy to work with us</h5>
 
-              <p class="center light">Provvederemo a trasporto e montaggio in loco; alla manutenzione durante tutta la durata dell'evento. La Dome ha un diametro di 12 mt alta 5,5 mt. Può essere adagiata su terreni pianeggianti, copre una area di 108 mq.</p>
+              <p class="center light">Provvederemo a trasporto e montaggio in loco; alla manutenzione durante tutta la durata dell'evento. La Dome ha un diametro di 12 mt alta 5 mt. Può essere adagiata su terreni pianeggianti, copre una area di 1110 mq.</p>
             </div>
           </div>
         </div>
