--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <br><br>
         <h1 class="header white-text lighter-3 center">DomeRadUno</h1>
         <div class="row center">
-          <h5 class="header-subtitle white-text light">Affitta la DOME. RadUna la Tribù.</h5>
+          <h5 class="white-text light">Affitta la DOME. RadUna la Tribù.</h5>
         </div>
         <div class="row center">
        
@@ -148,14 +148,35 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- foto centrale -->
   <div class="parallax-container valign-wrapper">
     <div class="section-intro no-pad-bot">
-      <div class="container">
+
+    <div class="header-subtitle class="container">
+        <div class="row center">
+         <h5 white-text light">Sei interessato alle date disponibili? Lasciaci la tua mail.</h5>
+         <div class="col s12 m6 offset-m3 center">
+          <!-- Begin MailChimp Signup Form -->
+           <div id="mc_embed_signup">
+               <form action="https://facebook.us18.list-manage.com/subscribe/post?u=67632ce202f29248da7c5e397&amp;id=8b9e50fb25" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                  <input type="email" value="" name="EMAIL" class="validate white center black-text" id="mce-EMAIL" placeholder="Inserisci la tua email" required>
+                  <button class="btn waves-effect waves-light red lighten-1" type="submit" name="action">Iscriviti alla Newsletter</button>
+                </div>
+              </form>
+            </div>
+          <!--End mc_embed_signup-->
+        </div>
+      </div>
+      </div>
+
+      <!-- div class="container">
+       
         <div class="row center">
         <h2 class="header white-text light">Insieme in Natura</h2>
         </div>
       </div>
-    </div>
-    <div class="parallax"><img src="Dome_giorno3.jpg" alt="Unsplashed background img 2"></div>
+    </div-->
+    <div class="parallax"><img src="Dome_Testata.jpg" alt="Unsplashed background img 2"></div>
   </div>
+</div>
 
   <div class="container">
     <div class="section-intro">
@@ -176,31 +197,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <div class="parallax-container valign-wrapper">
     <div class="section-intro no-pad-bot">
-      <div class="container">
+     <div class="container">
         <div class="row center">
-         <h5 class="header-subtitle white-text light">Sei interessato alle date disponibili? Lasciaci la tua mail.</h5>
-         <div class="col s12 m6 offset-m3 center">
-          <!-- Begin MailChimp Signup Form -->
-           <div id="mc_embed_signup">
-               <form action="https://facebook.us18.list-manage.com/subscribe/post?u=67632ce202f29248da7c5e397&amp;id=8b9e50fb25" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <div id="mc_embed_signup_scroll">
-                  <input type="email" value="" name="EMAIL" class="validate white center black-text" id="mce-EMAIL" placeholder="Inserisci la tua email" required>
-                  <button class="btn waves-effect waves-light red lighten-1" type="submit" name="action">Iscriviti alla Newsletter</button>
-                </div>
-              </form>
-            </div>
-          <!--End mc_embed_signup-->
+          <h2 class="header white-text light">Insieme in Natura</h2>
         </div>
-      </div>
-
-      </div>
     </div>
-
-     <div class="parallax"><img src="Dome_Testata.jpg" alt="Unsplashed background img 2"></div>
   </div>
-
-
- <div id="galleria" class="parallax-collage">
+        <div class="parallax"><img src="Dome_giorno3.jpg" alt="Unsplashed background img 2"></div>
+</div>
+  
+  <div id="galleria" class="parallax-collage">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="parallax-collage"> <img class="responsive-img" src="collage.jpg"></div>
