cambio img social

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- FB open graph -->
   <meta property="og:url" content="http://domeraduno.life/index.html" /> 
   <meta property="og:title" content="Dome Raduno | affitta la Dome e Raduna la tribù" /> 
-<meta property="og:image" content="http://domeraduno.life/dome_raduno.png" />
+<meta property="og:image" content="http://domeraduno.life/dome_raduno_sfo.png" />
   <meta property="og:description"    content="Affitta Tensostruttura DOME per eventi e raduni in natura. Richiedi preventivo | Prenota Ora" />
 
   <!-- CSS  -->
