--- a/index.html
+++ b/index.html
@@ -200,11 +200,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="container">
         <div class="row center">
           <h2 class="header white-text light">Insieme in Natura</h2>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fdomeraduno%2Fvideos%2F631584660529225%2F&show_text=0&width=476" width="476" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
         </div>
+      </div>
     </div>
+
+    <div class="parallax"><img src="Dome_giorno3.jpg" alt="Unsplashed background img 2"></div>
   </div>
-        <div class="parallax"><img src="Dome_giorno3.jpg" alt="Unsplashed background img 2"></div>
-</div>
+
+
   
   <div id="galleria" class="parallax-collage">
     <div class="section no-pad-bot">
