--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WJVXRBH');</script>
 <!-- End Google Tag Manager -->
 
+
 </head>
 
 <body>
+   
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJVXRBH"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -167,13 +169,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       </div>
 
-      <!-- div class="container">
-       
-        <div class="row center">
-        <h2 class="header white-text light">Insieme in Natura</h2>
-        </div>
-      </div>
-    </div-->
+     
     <div class="parallax"><img src="Dome_Testata.jpg" alt="Unsplashed background img 2"></div>
   </div>
 </div>
@@ -194,14 +190,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </div>
 
+ 
 
   <div class="parallax-container valign-wrapper">
     <div class="section-intro no-pad-bot">
      <div class="container">
         <div class="row center">
           <h2 class="header white-text light">Insieme in Natura</h2>
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fdomeraduno%2Fvideos%2F631584660529225%2F&show_text=0&width=476" width="476" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-        </div>
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fdomeraduno%2Fvideos%2F631584660529225%2F&width=500&show_text=false&appId=1267220750013643&height=500" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+         </div>
       </div>
     </div>
 
