--- a/index.html
+++ b/index.html
@@ -203,10 +203,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="parallax"><img src="Dome_giorno3.jpg" alt="Unsplashed background img 2"></div>
   </div>
+  
 
-<div class="row center">
-  <br>
-   <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fdomeraduno%2Fvideos%2F631584660529225%2F&width=500&show_text=false&appId=1267220750013643&height=325" width="325" height="325" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+<div class="section-intro-video no-pad-bot">
+  <div class="container">
+  <div class="row center">
+    <br>
+    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fdomeraduno%2Fvideos%2F631584660529225%2F&width=500&show_text=false&appId=1267220750013643&height=500" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+  </div>
+</div>
 </div>
 
   <div id="galleria" class="parallax-collage">
