no video gallery

--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>
               <a href="mailto:summercamplaviadelcerchio@gmail.com" target="_blank center" class="social-icon"><i class="material-icons">email</i>Manda una mail</a><br>
               <a href="tel:+393892740622" target="_blank center" class="social-icon"><i class="material-icons">phone</i>Chiamaci Ora</a>
-              <br><br>
-              <a href="https://www.facebook.com/domeraduno/videos/631584660529225/" target="_blank center">Video Gallery</a>             
+              <!-- br><br>
+              <a href="https://www.facebook.com/domeraduno/videos/631584660529225/" target="_blank center">Video Gallery</a-->             
             </li>
                      
         </div>
