mod foto iniziale

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <br><br>
         <h1 class="header white-text lighter-3 center">DomeRadUno</h1>
         <div class="row center">
-          <h5 class="white-text light">Affitta la DOME. RadUna la Tribù.</h5>
+            <h5 class="white-text light">Affitta la DOME. RadUna la Tribù.</h5>
         </div>
         <div class="row center">
        
@@ -111,7 +111,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
 
-    <div class="parallax"><img class="responsive-img" src="Dome_rosa.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img class="responsive-img" src="Dome_giorno3.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -201,6 +201,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="section-intro no-pad-bot">
      <div class="container">
         <div class="row center">
+          <a href="dome_video"</a>
           <h2 class="header white-text light">Insieme in Natura</h2>
          </div>
        </div>
