--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
 
-    <div class="parallax"><img class="responsive-img" src="Dome_giorno3.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="Dome_giorno3.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
