--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
  <link href = "https://fonts.googleapis.com/css?family=+Hyeon" rel="stylesheet">
 
+<link href="https://fonts.googleapis.com/css?family=Montserrat:600i" rel="stylesheet">
 <!-- sumo  me -->
 <script async>(function(s,u,m,o,j,v){j=u.createElement(m);v=u.getElementsByTagName(m)[0];j.async=1;j.src=o;j.dataset.sumoSiteId='396f8e8b632e08c932045867849a0f93916a1a8cd651a9d46c03638dd34ed783';v.parentNode.insertBefore(j,v)})(window,document,'script','//load.sumo.com/');</script>
 
@@ -96,9 +97,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="section-intro no-pad-bot">
       <div class="container"> 
         <br><br>
-        <h1 class="header white-text lighter-3 center">DomeRadUno</h1>
         <div class="row center">
-            <h5 class="white-text light">Affitta la DOME. RadUna la Tribù.</h5>
+        <h1 class="header white-text lighter-3">DomeRadUno</h1>
+            <h3 class="header-subtitle2 lighter">Affitta la DOME. RadUna la Tribù.</h3>
         </div>
         <div class="row center">
        
@@ -201,13 +202,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="section-intro no-pad-bot">
      <div class="container">
         <div class="row center">
-          <a href="dome_video"</a>
-          <h2 class="header white-text light">Insieme in Natura</h2>
+          <h2 class="header white-text light">Suggestive Serate Insieme</h2>
          </div>
        </div>
     </div>
+          <div class="parallax"><img src="Dome_rosa.jpg" alt="Unsplashed background img 2"></div>
 
-    <div class="parallax"><img src="Dome_giorno3.jpg" alt="Unsplashed background img 2"></div>
   </div>
   
   <div id="galleria" class="parallax-collage">
