--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <br><br>
         <div class="row center">
         <h1 class="header white-text lighter-3">DomeRadUno</h1>
-            <h3 class="header-subtitle2 lighter">Affitta la DOME. RadUna la Tribù.</h3>
+            <h3 class="red-text lighter">Affitta la DOME. RadUna la Tribù.</h3>
         </div>
         <div class="row center">
-              <a class="typeform-share btn-large waves-effect waves-light red lighten-1" href="https://domeraduno.typeform.com/to/N8oQb5" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Richiedi Preventivo</a>
+       
+            <a class="typeform-share btn-large waves-effect waves-light red lighten-1" href="https://domeraduno.typeform.com/to/N8oQb5" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Richiedi Preventivo</a>
 
         </div>
 
