--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="parallax"><img src="Dome_giorno3.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
+ <div class="row center">
+  <br><br>
+    <video width="320" height="240" controls>
+      <source src="dome_video.mp4" type="video/mp4">
+    </video>
+  </div>
 
   <!-- Zona Servizi -->
   <div id="servizi" class="container">
