--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <br><br>
         <div class="row center">
         <h1 class="header white-text lighter-3">DomeRadUno</h1>
-            <h3 class="red-text lighter">Affitta la DOME. RadUna la Tribù.</h3>
+            <h3 class="yellow-text lighter">Affitta la DOME. RadUna la Tribù.</h3>
         </div>
         <div class="row center">
        
@@ -133,7 +133,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
               <h5 class="center">Il Centro della Tribù</h5>
 
-              <p class="center light">Se vuoi organizzare campi estivi, spettacoli, seminari, concerti all'aperto. Se hai bisogno di strutture semplici e naturali dove poter ospitare un gruppo di persone, dove costituire un corpo centrale e aggregativo, come in un piccolo villaggio.</p>
+              <h6 class="center light">Se vuoi organizzare campi estivi, spettacoli, seminari, concerti all'aperto. Se hai bisogno di strutture semplici e naturali dove poter ospitare un gruppo di persone, dove costituire un corpo centrale e aggregativo, come in un piccolo villaggio.</h6>
             </div>
           </div>
 
@@ -142,7 +142,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h2 class="center brown-text"><i class="material-icons">group</i></h2>
               <h5 class="center">La Dome Experience</h5>
 
-              <p class="center light">Alta, luminosa, capiente e protettiva, La Dome è realizzata in bambù e quindi anche superleggera. Saldamente ancorata a terra dal telo in silocover, è la struttura ideale sia in caso di sole che di pioggia. Areabile da entrambe i lati, suggestiva e intima alle luci della sera.</p>
+              <h6 class="center light">Alta, luminosa, capiente e protettiva, La Dome è realizzata in bambù e quindi anche superleggera. Saldamente ancorata a terra dal telo in silocover, è la struttura ideale sia in caso di sole che di pioggia. Areabile da entrambe i lati, suggestiva e intima alle luci della sera.</h6>
             </div>
           </div>
 
@@ -151,7 +151,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <h2 class="center brown-text"><i class="material-icons">build</i></h2>
               <h5 class="center">Easy to work with us</h5>
 
-              <p class="center light">Provvederemo a trasporto e montaggio in loco; alla manutenzione durante tutta la durata dell'evento. La Dome ha un diametro di 12 mt alta 5 mt. Può essere adagiata su terreni pianeggianti, copre una area di 110 mq.</p>
+              <h6 class="center light">Provvederemo a trasporto e montaggio in loco; alla manutenzione durante tutta la durata dell'evento. La Dome ha un diametro di 12 mt alta 5 mt. Può essere adagiata su terreni pianeggianti, copre una area di 110 mq.</h6>
             </div>
           </div>
         </div>
