--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  <div class="row center">
   <br><br>
     <video width="320" height="240" controls>
-      <source src="dome_video.mp4" type="video/mp4" preload>
+      <source src="dome_video.mp4" type="video/mp4" >
     </video>
   </div>
 
