--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <br><br>
         <div class="row center">
         <h1 class="header white-text lighter-3">DomeRadUno</h1>
-            <h3 class="yellow-text lighter">Affitta la DOME. RadUna la Tribù.</h3>
+            <h3 class="red-text lighter">Affitta la DOME. RadUna la Tribù.</h3>
         </div>
         <div class="row center">
        
